--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,10 +26,17 @@ jobs:
         run: |
           npm ci
 
+      - name: Prepare DB
+        run: |
+          npm run setup
+
       - name: Install Playwright browsers
         run: |
           npx playwright install --with-deps
 
       - name: Run scheduled script
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           npm run run
