--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -40,8 +40,10 @@ jobs:
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        shell: bash
         run: |
-          npm run run
+          set -o pipefail
+          npm run run 2>&1 | tee run-output.txt
 
       - name: Notify on failure (Telegram)
         if: failure()
@@ -52,10 +54,19 @@ jobs:
           RUN_ID: ${{ github.run_id }}
           WORKFLOW: ${{ github.workflow }}
           GIT_SHA: ${{ github.sha }}
+          JOB_NAME: ${{ github.job }}
+        shell: bash
         run: |
           set -euo pipefail
           SHORT_SHA=${GIT_SHA:0:7}
-          MSG="CI FAIL — ${WORKFLOW} — ${REPO}\nRun: https://github.com/${REPO}/actions/runs/${RUN_ID}\nCommit: ${SHORT_SHA}"
+          SNIPPET=""
+          if [ -f run-output.txt ]; then
+            SNIPPET=$(tail -n 20 run-output.txt | tr '\n' ' ' | sed 's/"/\\"/g' | cut -c1-300)
+          fi
+          MSG="CI FAIL — ${WORKFLOW} — ${REPO}\nJob: ${JOB_NAME}\nCommit: ${SHORT_SHA}\nRun: https://github.com/${REPO}/actions/runs/${RUN_ID}"
+          if [ -n "$SNIPPET" ]; then
+            MSG="$MSG\nError: ${SNIPPET}"
+          fi
           curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
             -d parse_mode=HTML \
